# master-thesis

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .ruff.toml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: check-build.yaml  check-code-quality.yaml  check-code.yaml
examples/cpp/: CMakeLists.txt  README.md  registration_example.cpp
examples/python/: README.md  registration_example.py
python/: CMakeLists.txt  setup.py.in
python/registration/: __init__.py  python_wrapper.cpp
python/registration_python/: python_wrapper.cpp
registration/: CMakeLists.txt
registration/include/registration/: constant.h  fracgm.h  gnc.h  graph.h  irls.h  mcis.h  parameter.h  qgm.h  robin.h  solver.h  tuple.h  utils.h
registration/src/: fracgm.cpp  gnc.cpp  graph.cpp  irls.cpp  mcis.cpp  qgm.cpp  robin.cpp  solver.cpp  tuple.cpp  utils.cpp
